--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,3 +1,5 @@
+@import '../../App.css';
+
 header {
     position: fixed;
     width: 100%;
@@ -55,6 +57,7 @@ header {
             background: #141313;
             color: #fff;
         }
+
         #menu-icon {
             font-size: 35px;
             color: #141313;
